--- a/Hotel/src/main/webapp/WEB-INF/views/room_icon.jspf
+++ b/Hotel/src/main/webapp/WEB-INF/views/room_icon.jspf
@@ -1,94 +1,21 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <%@ page import="data.RoomData" %>
 
-<div class="col-4 text-start">
+<div class="text-start mb-5" style="padding: 0 10%">
 	<h2 class="mt-3">相關設備</h2>
-	<ul class="icon_ul">
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-2-square icon"></i>
+	<div class="row d-flex">
+		<%
+			for(int i=1; i<=20; i++)
+			{
+		%>
+				<div class="col-2 text-center">
+					<div>
+						<img style="max-height: 5em;" alt="" src="./images/s_equipment<%=i %>.png">
+					</div>
+					<div class="mb-2">名字</div>
 				</div>
-				<div class="">二樓</div>
-			</div>
-		</li>
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-3-square icon"></i>
-				</div>
-				<div>三樓</div>
-			</div>
-		</li>
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-4-square icon"></i>
-				</div>
-				<div>四樓</div>
-			</div>
-		</li>
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-5-square icon"></i>
-				</div>
-				<div>五樓</div>
-			</div>
-		</li>
-	</ul>
-	
-	<ul class="icon_ul">
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-1-circle icon"></i>
-				</div>
-				<div>一大床</div>
-			</div>
-		</li>
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-2-circle icon"></i>
-				</div>
-				<div>兩中床</div>
-			</div>
-		</li>
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-4-circle icon"></i>
-				</div>
-				<div>四小床</div>
-			</div>
-		</li>
-	</ul>
-	
-	<ul class="icon_ul">
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-flower1 icon"></i>
-				</div>
-				<div>花園</div>
-			</div>
-		</li>
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-tree icon"></i>
-				</div>
-				<div>叢林</div>
-			</div>
-		</li>
-		<li class="icon_li">
-			<div class="icon_div">
-				<div>
-					<i class="bi bi-flower2 icon"></i>
-				</div>
-				<div>更多的花</div>
-			</div>
-		</li>
-	</ul>
+		<%
+			}
+		%>
+	</div>
 </div>
