--- a/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
+++ b/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
@@ -1,50 +1,29 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ page import="java.util.List" %>
-<%@ page import="java.util.Map" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <%@ page import="com.example.entity.Room" %>
 
-<%
-	List<Integer> roomId = (List<Integer>)request.getAttribute("roomId");
-	List<String> roomImgPaths = (List<String>) request.getAttribute("roomImgPaths");
-	List<String> roomTitle = (List<String>) request.getAttribute("roomTitle");
-	List<String> roomType = (List<String>) request.getAttribute("roomType");
-	List<String> roomContext = (List<String>) request.getAttribute("roomContext");
-	List<String> roomDescribe = (List<String>) request.getAttribute("roomDescribe");
-	
-	Room room = (Room) request.getAttribute("room");
-	List<Room> otherRooms = (List<Room>) request.getAttribute("otherRooms");
-	int roomIdInt = (int) request.getAttribute("roomId");
-%>
 
 <div class="position-relative text-center" style="margin: 0 20%; margin-top: 10vh">
 	<div class="fs-1">房型介紹</div>
 	<div>
-		<img src="<%= roomImgPaths %>" alt="Image${roomId}" class="img-fluid mt-3">
+		<img src="${room.roomIm}" alt="Image${roomId}" class="img-fluid mt-3">
 	</div>
 	<div class="row mb-5">
 		<div class="col-3 d-flex flex-column justify-content-center align-items-center">
-			<%
-				for(int i=0; i<roomTitle.size(); i++)
-				{
-					if(i==0)
-					{
-			%>
-						<h2 class="mt-3 mb-3">其他房型</h2>
-			<%
-					}
-			%>
-				<button type="button" class="btn color2 text1 mb-4 fs-5" style="min-width: 10vw;" onclick="window.location.href='./page3/room_index/<%= roomId.get(i) %>'">
-					<%=roomTitle.get(i) %>
+			<c:forEach var="room" items="${roomTitle}" varStatus="loopStatus">
+				<c:if test="${loopStatus.first}">
+					<h2 class="mt-3 mb-3">其他房型</h2>
+				</c:if>
+				<button type="button" class="btn color2 text1 mb-4 fs-5" style="min-width: 10vw;" onclick="window.location.href='./page3/room_index/${roomId[loopStatus.index]}'">
+					${room}
 				</button>
 				<div class="w-100"></div>
-			<%
-				}
-			%>
+			</c:forEach>	
 		</div>
 		
 		<div class="col-7 d-flex flex-column justify-content-start">
-			<h1 class="mt-3" style="font-weight: bold;"><%= room.getRoomTitle() %></h1>
-			<p class="mt-5 fs-4 text-start"><%= room.getRoomDescribe() %></p>
+			<h1 class="mt-3" style="font-weight: bold;">${room.roomTitle}</h1>
+			<p class="mt-5 fs-4 text-start">${room.roomDescribe}</p>
 			<div class="mt-5 fs-3 text-start">價格：0</div>
 		</div>
 		<div class="col-2 d-flex flex-column justify-content-end">
