--- a/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
+++ b/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
@@ -6,28 +6,28 @@
 <div class="position-relative text-center" style="margin: 0 20%; margin-top: 10vh">
 	<div class="fs-1">房型介紹</div>
 	<div>
-		<img src="${room.roomIm}" alt="Image${roomId}" class="img-fluid mt-3">
+		<img src="${room.roomImgPaths}" alt="Image${roomId}" class="img-fluid mt-3">
 	</div>
 	<div class="row mb-5">
 		<div class="col-3 d-flex flex-column justify-content-center align-items-center">
-			<c:forEach var="room" items="${roomTitle}" varStatus="loopStatus">
+			<c:forEach var="otherRoom" items="${titles}" varStatus="loopStatus">
 				<c:if test="${loopStatus.first}">
 					<h2 class="mt-3 mb-3">其他房型</h2>
 				</c:if>
-				<button type="button" class="btn color2 text1 mb-4 fs-5" style="min-width: 10vw;" onclick="window.location.href='./page3/room_index/${roomId[loopStatus.index]}'">
-					${room}
+				<button type="button" class="btn color2 text1 mb-4 fs-5" style="min-width: 10vw;" onclick="window.location.href='./${otherRoom.roomId}'">
+					${otherRoom.roomTitle}
 				</button>
 				<div class="w-100"></div>
-			</c:forEach>	
+			</c:forEach>
 		</div>
 		
 		<div class="col-7 d-flex flex-column justify-content-start">
 			<h1 class="mt-3" style="font-weight: bold;">${room.roomTitle}</h1>
 			<p class="mt-5 fs-4 text-start">${room.roomDescribe}</p>
-			<div class="mt-5 fs-3 text-start">價格：0</div>
+			<div class="mt-5 fs-3 text-start">價格：${room.roomPrice}</div>
 		</div>
 		<div class="col-2 d-flex flex-column justify-content-end">
-			<button type="button" class="btn round-button color2 mb-5" onclick="window.location.href='./page5.jsp'">前往訂房</button>
+			<button type="button" class="btn round-button color2 mb-5" onclick="window.location.href='./bookDetail.jsp'">前往訂房</button>
 		</div>
 	</div>
 	<%@ include file="/WEB-INF/views/room_icon.jspf" %>
