--- a/Hotel/src/main/webapp/WEB-INF/views/room_icon.jspf
+++ b/Hotel/src/main/webapp/WEB-INF/views/room_icon.jspf
@@ -1,21 +1,30 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <%@ page import="data.RoomData" %>
 
 <div class="text-start mb-5" style="padding: 0 10%">
 	<h2 class="mt-3">相關設備</h2>
 	<div class="row d-flex">
-		<%
-			for(int i=1; i<=20; i++)
-			{
-		%>
-				<div class="col-2 text-center">
-					<div>
-						<img style="max-height: 5em;" alt="" src="${equipment.equPath}">
-					</div>
-					<div class="mb-2">${equipment.equName}</div>
-				</div>
-		<%
-			}
-		%>
+<%-- 		<c:forEach var="roomEquipment" items="${roomEquipments}"> --%>
+<!-- 			<div class="col-2 text-center"> -->
+<!-- 				<div> -->
+<%-- 					<img style="max-height: 5em;" alt="" src="${roomEquipment.equPath}"> --%>
+<!-- 				</div> -->
+<%-- 				<div class="mb-2">${roomEquipment.equName}</div> --%>
+<!-- 				</div> -->
+<%-- 		</c:forEach> --%>
+<c:forEach var="roomEquipment" items="${roomEquipments}">
+    <div class="col-2 text-center">
+        <div>
+            <c:if test="${not empty roomEquipment and not empty roomEquipment.equPath}">
+                <img style="max-height: 5em;" alt="" src="${roomEquipment.equPath}">
+            </c:if>
+        </div>
+        <div class="mb-2">${roomEquipment.equName}</div>
+    </div>
+</c:forEach>
+
+
+
 	</div>
 </div>
