--- a/Hotel/.settings/org.eclipse.wst.common.component
+++ b/Hotel/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                
+                                    
+    
     
     
     
@@ -7,7 +8,8 @@
     
     
     <wb-module deploy-name="Hotel-0.0.1-SNAPSHOT">
-                                                                
+                                                                        
+        
         
         
         
@@ -15,7 +17,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                
+                                                                        
+        
         
         
         
@@ -23,8 +26,15 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-                                                                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-test-sources/test-annotations"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                                                                        
+        
         
         
         
@@ -32,7 +42,8 @@
         
         
         <property name="context-root" value="Hotel"/>
-                                                                
+                                                                        
+        
         
         
         
@@ -40,7 +51,8 @@
         
         
         <property name="java-output-path" value="/Hotel/target/classes"/>
-                                                            
+                                                                    
+    
     
     
     
@@ -48,7 +60,8 @@
     
     
     </wb-module>
-                            
+                                
+
 
 
 
