--- a/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
+++ b/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
@@ -27,7 +27,7 @@
 			<div class="mt-5 fs-3 text-start">價格：${room.roomPrice}</div>
 		</div>
 		<div class="col-2 d-flex flex-column justify-content-end">
-			<button type="button" class="btn round-button color2 mb-5" onclick="window.location.href='./bookDetail.jsp'">前往訂房</button>
+			<button type="button" class="btn s-round-button color2 mb-5" onclick="window.location.href='./bookDetail.jsp'">前往訂房</button>
 		</div>
 	</div>
 	<%@ include file="/WEB-INF/views/room_icon.jspf" %>
