--- a/Hotel/src/main/webapp/css/index_css.css
+++ b/Hotel/src/main/webapp/css/index_css.css
@@ -1,12 +1,10 @@
 /* ------------------首頁圖片------------------------------------ */
-.HomePicture
-{
+.HomePicture {
 	position: relative;
 	text-align: center;
 }
 /* ------------------welcome to the hotel-------------------------- */
-.centered-text
-{
+.centered-text {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -14,45 +12,40 @@
 	background-color: transparent;
 	padding: 10px;
 }
-
-.centered-text span
-{
+		
+.centered-text span {
 	font-family: 'EB Garamond', sans-serif; /* 使用 Google Fonts 中的  字體 */
 	font-size: 60px;
 	color: #FFFFFF; /* 修改文字顏色 */
 }
-
+	
 /* ------------------消息預覽標題------------------------------------ */
-.NewsPreviewTitle
-{
+.NewsPreviewTitle{
 	background-color: #EBE3D5; /* 背景顏色 */
 	height:70px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 20px; /* 可以添加內邊距來增加文字區域的大小 */
+	
 }
-.NewsPreviewTitle h2
-{
-	font-size: 40px; /* 設定字體大小為24像素，你可以根據需要調整這個數值 */
+.NewsPreviewTitle h2 {
+	font-size: 40px; /* 設定字體大小為60像素，你可以根據需要調整這個數值 */
 	color: #776B5D; /* 可以設定字體顏色 */
-	margin-bottom: 10px; /* 添加底部間距 */
+	margin-bottom: 0px; /* 添加底部間距 */
+	
 }
-/* ---------------消息預覽--------------------------------------- */
-
-.NewsPreview
-{
+/* ---------------消息預覽--------------------------------------- */	
+.NewsPreview {
 	width: 80%; /* 設定房間預覽區塊的寬度 */
 	margin: 0 auto; /* 將其置中 */
 }
-
-.NewsPreview .center div
-{
+		
+.NewsPreview .center div {
 	position: relative;
 }
 
-.NewsPreview .center .slick-slide div:has(>img)::before
-{
+.NewsPreview .center .slick-slide div:has(>img)::before {
 	content: 'View';
 	position: absolute;
 	top: 0;
@@ -71,13 +64,11 @@
 	font-size: 20px;
 }
 
-.NewsPreview .center .slick-slide  div:has(>img):hover::before
-{
+.NewsPreview .center .slick-slide  div:has(>img):hover::before {
 	opacity: 1;
 }
-		
-.NewsPreview .center img
-{
+
+.NewsPreview .center img {
 	max-width: 100%; /* 讓圖片最大寬度為其容器的寬度 */
 	height: auto; /* 保持圖片比例 */
 	display: block; /* 清除預設的間距 */
@@ -85,45 +76,37 @@
 }
 
 /* 可依需求調整圖片間距 */
-.NewsPreview .center
-{
+.NewsPreview .center {
 	padding: 20px;
 }
 
 /* 使得當螢幕變小時，圖片不會黏在一起 */
-.NewsPreview .center .slick-slide
-{
+.NewsPreview .center .slick-slide {
 	margin: 0 10px;
 }
-
 /* 左箭頭 */
-.slick-prev:before
-{
+.slick-prev:before {
 	color: #B0A695;
 }
 
 /* 右箭頭 */
-.slick-next:before
-{
+.slick-next:before {
 	color: #B0A695;
 }
-.Newsbg
-{
+.Newsbg{
 	background-color: #EBE3D5;;
 }
 
-.NewsPreview .center div h5
-{
+.NewsPreview .center div h5 {
 	text-align: center;
+	font-size: 20px;
 }
-.NewsPreview .custom-button
-{
+.NewsPreview .custom-button{
 	cursor: pointer; /* 讓滑鼠指針顯示為手形 */
 }
-	
+		
 /* -------------------房型預覽標題----------------------------------- */
-.RoomPreviewTitle
-{
+.RoomPreviewTitle {
 	background-color: #EBE3D5; /* 背景顏色 */
 	color:#776B5D;
 	height:70px;
@@ -132,37 +115,31 @@
 	align-items: center;
 	padding: 20px; /* 可以添加內邊距來增加文字區域的大小 */
 }
-.RoomPreviewTitle h2
-{
-	font-size: 40px; /* 設定字體大小為24像素，你可以根據需要調整這個數值 */
+.RoomPreviewTitle h2 {
+	font-size: 40px; /* 設定字體大小為60像素，你可以根據需要調整這個數值 */
 	color: #776B5D; /* 可以設定字體顏色 */
 	margin-bottom: 10px; /* 添加底部間距 */
 }
 /* --------------卡空位的空白-------------------------------- */
-.spacer
-{
+.spacer {
 	height: 50px; /* 間距高度 */
 	background-color: #EBE3D5;
 }
 
 /* -------------------房型預覽 雙人房--------------------------------- */
-.Roombg
-{
+.Roombg{
 	background-color: #EBE3D5;;
 }
-.room-container1
-{
+.room-container1 {
 	display: flex;
 }
 
-.room-container1 img
-{
+.room-container1 img {
 	width: 50%;
 	order: 2; /* 將圖片順序設為 2，以確保在 .writePreview 後顯示 */
 }
 
-.writePreview1
-{
+.writePreview1 {
 	width: 50%;
 	display: flex;
 	flex-grow: 1;
@@ -170,43 +147,34 @@
 	align-items: center; /* 在水平方向上置中 */
 	justify-content: center;
 }
-
-.write1 p
-{
-	text-align: center;
-	line-height: 2;
+.write1 p {
+	text-align: center; 
+	line-height: 2; 
+	font-size: 20px; 
+	
 }
-
-.write1 h2
-{
-	text-align: left;
+	
+.write1 h2 {
+	text-align: left; 
+	font-size: 40px; 
 }
-
-.write2
-{
-	margin-top: auto; /* 讓 .write2 在 .write1 下面並垂直排列 */
-	align-self: center; /* 將 .write2 置於垂直方向的起始位置 */
-}
-
-.write2 p
-{
-	text-align: center;
+	
+.write2 p {
+	text-align: center; 
+	font-size: 20px; 
 }
 
 /* -------------------房型四人房--------------------------------- */
-.room-container2
-{
+.room-container2 {
 	display: flex;
 }
 
-.room-container2 img
-{
+.room-container2 img {
 	width: 50%;
 	order: 2; /* 將圖片順序設為 2，以確保在 .writePreview 後顯示 */
 }
 
-.writePreview2
-{
+.writePreview2 {
 	width: 50%;
 	display: flex;
 	flex-grow: 1;
@@ -214,62 +182,19 @@
 	align-items: center; /* 在水平方向上置中 */
 	justify-content: center;
 }
-
-.write3 p
-{
-	text-align: center;
-	line-height: 2;
+	
+.write3 p {
+	text-align: center; 
+	line-height: 2; 
+	font-size: 20px; 
 }
 
-.write3 h2
-{
-	text-align: left;
+.write3 h2 {
+	text-align: left; 
+	font-size: 40px; 
 }
-
-.write4
-{
-	margin-top: auto; /* 讓 .write2 在 .write1 下面並垂直排列 */
-	align-self: center; /* 將 .write2 置於垂直方向的起始位置 */
-}
-
-.write4 p
-{
-	text-align: center;
-}
-/* ---------------------房間圖片增加灰層效果------------------------------ */
-.RoomPreview  div
-{
-	position: relative;
-}
-
-.RoomPreview  div:has(>img)::before
-{
-	content: 'View';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%; /* 與圖片寬度相符 */
-	height: 100%; /* 與圖片高度相符 */
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: rgba(0, 0, 0, 0.5);
-	opacity: 0;
-	transition: opacity 0.3s ease;
-	box-sizing: border-box;
-	padding: 20px; /* 調整方塊內邊距 */
-	color: white;
-	font-size: 20px;
-}
-
-.RoomPreview  div:has(>img):hover::before
-{
-	opacity: 1;
-}
-.RoomPreview img
-{
-	max-width: 100%; /* 讓圖片最大寬度為其容器的寬度 */
-	height: auto; /* 保持圖片比例 */
-	display: block; /* 清除預設的間距 */
-	margin: 0 auto 0px; /* 設定底部間距 */
+	
+.write4 p {
+	text-align: center; 
+	font-size: 20px; 
 }
