--- a/Hotel/src/main/webapp/css/room_css.css
+++ b/Hotel/src/main/webapp/css/room_css.css
@@ -1,20 +1,37 @@
-.custom-container
+.s-round-button
 {
-	max-width: 20%;
-	margin: 0;
-}
-.list-unstyled
-{
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-.round-button
-{
-	width: 90%; /* 调整按钮的宽度和高度，使其成为正圆形 */
+	/* 调整按钮的宽度和高度，使其成为正圆形 */
+	width: 90%;
 	height: 30%;
-	border-radius: 50%; /* 将边框半径设置为50%，使其成为正圆形 */
+	/* 将边框半径设置为50%，使其成为正圆形 */
+	border-radius: 50%;
 	color: whitesmoke;
 	font-weight: bold;
 	font-size: 1.5em;
+}
+
+.s-image-container
+{
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+}
+.s-image-description
+{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(235, 227, 213, 0.5);
+	color: #000;
+	padding: 10px;
+	transform: translateY(80%);
+	transition: transform 0.3s;
+}
+.s-image-container:hover
+.s-image-description
+{
+	background-color: rgb(235, 227, 213);
+	transform: translateY(0);
 }
