--- a/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
+++ b/Hotel/src/main/webapp/WEB-INF/views/room_context.jspf
@@ -1,7 +1,7 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <%@ page import="com.example.entity.Room" %>
-
+<link rel="stylesheet" href="/Hotel/css/room_css.css">
 
 <div class="position-relative text-center" style="margin: 0 20%; margin-top: 10vh">
 	<div class="fs-1">房型介紹</div>
@@ -27,8 +27,37 @@
 			<div class="mt-5 fs-3 text-start">價格：${room.roomPrice}</div>
 		</div>
 		<div class="col-2 d-flex flex-column justify-content-end">
-			<button type="button" class="btn s-round-button color2 mb-5" onclick="window.location.href='./bookDetail.jsp'">前往訂房</button>
+<!-- 			<button type="button" class="btn s-round-button color2 mb-5" onclick="window.location.href='/Hotel/mvc/searchRoom'">前往訂房</button> -->
+			<button type="button" class="btn s-round-button color2 mb-5" onclick="goToReservation()">前往訂房</button>
 		</div>
 	</div>
 	<%@ include file="/WEB-INF/views/room_icon.jspf" %>
 </div>
+
+<!-- 在head標籤中引入以下JavaScript -->
+<script>
+	// 當按下前往訂房按鈕時觸發
+	function goToReservation()
+	{
+		// 使用AJAX檢查使用者是否已登入
+		var xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function()
+		{
+			if (xhr.readyState === 4)
+			{
+				if (xhr.status === 200)
+				{
+					// 使用者已登入，直接前往訂房頁面
+					window.location.href = '/Hotel/mvc/searchRoom';
+				}
+				else
+				{
+					// 使用者未登入，導向登入頁面
+					window.location.href = '/Hotel/mvc/login';
+				}
+			}
+		};
+		xhr.open('GET', '/Hotel/mvc/checkLogin', true);
+		xhr.send();
+	}
+</script>
