--- a/Hotel/src/main/webapp/css/index_css.css
+++ b/Hotel/src/main/webapp/css/index_css.css
@@ -11,6 +11,7 @@
 	transform: translate(-50%, -50%);
 	background-color: transparent;
 	padding: 10px;
+	width: 80%; 
 }
 		
 .centered-text span {
@@ -18,6 +19,16 @@
 	font-size: 60px;
 	color: #FFFFFF; /* 修改文字顏色 */
 }
+	
+.centered-text .book {
+    border: 2px solid rgba(255, 255, 255, 0.9); /* 白色邊框，透明度0.8 */
+    background-color: rgba(255, 255, 255, 0.9); /* 白色背景，透明度0.8 */
+    padding: 15px; /* 添加內邊距，使邊框與內容之間有一些空間 */
+    border-radius: 10px; /* 可選，添加圓角效果 */
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* 可選，添加陰影效果 */
+    margin-top: 40vh; /* 增加上方 margin */
+    font-size: 25px;
+}	
 	
 /* ------------------消息預覽標題------------------------------------ */
 .NewsPreviewTitle{
@@ -27,14 +38,14 @@
 	justify-content: center;
 	align-items: center;
 	padding: 20px; /* 可以添加內邊距來增加文字區域的大小 */
-	
 }
+
 .NewsPreviewTitle h2 {
 	font-size: 40px; /* 設定字體大小為60像素，你可以根據需要調整這個數值 */
 	color: #776B5D; /* 可以設定字體顏色 */
 	margin-bottom: 0px; /* 添加底部間距 */
-	
 }
+
 /* ---------------消息預覽--------------------------------------- */	
 .NewsPreview {
 	width: 80%; /* 設定房間預覽區塊的寬度 */
